# Asistente-Legal-API

./: .env example  README.md  pyproject.toml
App/: Agente con reformulacion.ipynb  Agente definitivo.ipynb  AsistenteTransito.ipynb  AsistentesOpcionales&Sql.ipynb  Docs splitter.ipynb  categorias_sinonimos_bolivia.json  langchain_helper.py  main.py
App/Database/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal
App/leyes/: 1973-BO-COD-DL10135.txt  1978-BO-RE-RS187444(1).txt  2006-BO-DS-28710.txt  2008-BO-L-3988.txt  2010-BO-DS-N420.txt  2011-BO-L-N145.txt  2014-BO-DS-N2079.txt  2017-BO-DS-N3045.txt  2022-BO-DS-N4740.txt  2022-BO-DS-N4780.txt  2022-BO-DS-N4810.txt  2022-BO-DS-N4845.txt  DECRETO SUPREMO N° 27295 DE 20 DE DICIEMBRE DE 2003.txt  Decreto supremo N 29293.txt  RESOLUCION ADMINISTRATIVA N 63 -2006.txt  Reglamento de Vidrios polarizados 2022.txt
